[package]
name = "lnshm"
version = "0.1.0"
edition = "2021"
authors = ["Wireless4024"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
symlink = "*" # hope he will update to 1.0 very soon
rand = "0.8"
clap = { version = "3.2", features = ["derive"] }